--- a/css/style.css
+++ b/css/style.css
@@ -33900,7 +33900,7 @@ ol li a:hover {
 .header-menu-area .logo {
   position: relative;
   z-index: 999;
-  height: 120px;
+  height: auto;
   display: flex;
   align-items: center;
   flex-shrink: 0;
@@ -33964,7 +33964,7 @@ ol li a:hover {
 }
 .main-menu ul li a {
   display: block;
-  padding: 24px;
+  padding: 54px 24px;
   text-decoration: none;
   text-transform: capitalize;
   transition: all 0.5s ease-out;
@@ -34932,7 +34932,7 @@ body.admin-bar .header-area.style-7 {
   overflow: hidden;
   position: relative;
   z-index: 2;
-  height: 999px;
+  height: auto;
 }
 .slider-area .shape {
   position: absolute;
@@ -34997,17 +34997,17 @@ body.admin-bar .header-area.style-7 {
 }
 @media only screen and (min-width: 1200px) and (max-width: 1399px) {
   .slider-area .single-slider {
-    padding-top: 80px;
+    padding-top: 180px;
   }
 }
-@media only screen and (min-width: 768px) and (max-width: 1199px) {
+@media only screen and (min-width: 768px) and (max-width: 991px) {
   .slider-area .single-slider {
-    height: 620px;
+    padding-top: 150px;
   }
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .slider-area .single-slider {
-    padding: 80px 0;
+    padding-top: 100px;
     height: unset;
   }
 }
@@ -35024,13 +35024,10 @@ body.admin-bar .header-area.style-7 {
 .slider-area .single-slider .slider-content-wrapper {
   position: relative;
   z-index: 99;
-  margin-top: 63px;
-  margin-right: 50px;
-  margin-left: -2px;
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .slider-area .single-slider .slider-content-wrapper {
-    padding-top: 0;
+    padding-top: 50px;
     padding-bottom: 50px;
   }
 }
@@ -35169,9 +35166,13 @@ body.admin-bar .header-area.style-7 {
   display: flex;
   align-items: center;
   gap: 20px;
-  margin-bottom: 58px;
   position: relative;
   z-index: 1;
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .slider-area .single-slider .slider-btn-wrapper {
+    justify-content: center;
+  }
 }
 .slider-area .single-slider .slider-btn-wrapper .simple-btn {
   padding: 14px 24px;
@@ -35237,7 +35238,6 @@ body.admin-bar .header-area.style-7 {
 }
 @media (max-width: 1199px) {
   .slider-area .single-slider .slider-image {
-    height: 450px;
     right: unset;
   }
   .slider-area .single-slider .slider-image .slider-image-inner {
@@ -35249,29 +35249,9 @@ body.admin-bar .header-area.style-7 {
     height: 100%;
   }
 }
-@media (max-width: 991px) {
+@media only screen and (min-width: 768px) and (max-width: 991px) {
   .slider-area .single-slider .slider-image {
-    height: 200px;
-  }
-}
-@media (max-width: 767px) {
-  .slider-area .single-slider .slider-image {
-    height: 180px;
-    right: unset;
-    text-align: center;
-  }
-  .slider-area .single-slider .slider-image .slider-image-inner {
-    width: 60px;
-    height: 40px;
-  }
-}
-@media (max-width: 575px) {
-  .slider-area .single-slider .slider-image {
-    height: 150px;
-  }
-  .slider-area .single-slider .slider-image .slider-image-inner {
-    width: 50px;
-    height: 35px;
+    margin-top: 50px;
   }
 }
 .slider-area .slider-wrapper .slick-active .slider-short-title,
@@ -35336,7 +35316,7 @@ body.admin-bar .header-area.style-7 {
   position: absolute;
   top: 50%;
   right: 178px;
-  transform: translateY(-50%);
+  transform: translateY(0%);
   z-index: 2;
   flex-direction: column;
   margin-bottom: 0;
@@ -35363,17 +35343,14 @@ body.admin-bar .header-area.style-7 {
 @media (max-width: 991px) {
   .slider-area .slider-wrapper .slick-dots {
     gap: 20px;
-    bottom: 80px;
+    bottom: 0;
   }
 }
 @media (max-width: 767px) {
   .slider-area .slider-wrapper .slick-dots {
     gap: 15px;
-    bottom: 60px;
-    top: unset;
-    left: 50%;
-    right: unset;
-    transform: translateX(-50%);
+    margin-top: 0;
+    transform: translateY(100%);
   }
 }
 @media (max-width: 575px) {
@@ -44378,6 +44355,28 @@ ul.children {
   transition: all 0.5s ease-out;
 }
 
+.slider-area {
+  padding-bottom: 60px;
+}
+.slider-area .checknow-form {
+  padding-top: 170px;
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .slider-area .checknow-form {
+    padding-top: 0px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .slider-area .checknow-form {
+    padding-top: 100px;
+  }
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .slider-area .checknow-form {
+    padding-top: 40px;
+  }
+}
+
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .about-us-area.style-1 {
     padding: 100px 0;
@@ -48664,9 +48663,6 @@ ul.children {
   display: none;
 }
 
-.checknow-form {
-  margin-top: 150px;
-}
 .checknow-form .inner-wrapper {
   padding: 20px;
   background-color: rgba(63, 63, 63, 0.5);
@@ -48675,6 +48671,7 @@ ul.children {
 }
 .checknow-form form {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   gap: 34px;
   padding: 30px;
