--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -280,7 +280,7 @@
   .logo {
     position: relative;
     z-index: 999;
-    height: 120px;
+    height: auto;
     display: flex;
     align-items: center;
     //min-width: 220px;
@@ -399,7 +399,7 @@
       }
       a {
         display: block;
-        padding: 24px;
+        padding: 54px 24px;
         text-decoration: none;
         text-transform: capitalize;
         @include transition;
