--- a/sass/modules/about-image-card/_about-image-card-one.scss
+++ b/sass/modules/about-image-card/_about-image-card-one.scss
@@ -7,6 +7,9 @@
         z-index: 5;
         width: 500px;
         height: 612px;
+        @include rmaxwd(1550) {
+          margin-left: 50px;
+        }
         img {
           width: 100%;
           height: 100%;
@@ -57,6 +60,9 @@
         width: 450px;
         height: 526px;
         border: 1px solid $primary-color;
+        @include rmaxwd(1550) {
+          left: 0px;
+        }
       }
     }
   }
