--- a/sass/partials/_title-section.scss
+++ b/sass/partials/_title-section.scss
@@ -152,10 +152,6 @@
 .banner-text {
   position: relative;
   p {
-    // position: absolute;
-    // top: 0;
-    // left: 0;
-    // right: 0;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: rgba(102, 102, 102, 0.7);
     font-family: 'Gilda Display';
@@ -168,5 +164,9 @@
     color: $white;
     text-wrap: nowrap;
     transform: translate(-8%, -33%);
+    @include rmaxwd(1700) {
+      font-size: 170px;
+      transform: translate(0, -33%);
+    }
   }
 }
