--- a/sass/modules/info-card/_info-card.scss
+++ b/sass/modules/info-card/_info-card.scss
@@ -13,6 +13,9 @@
     z-index: 2;
     border: 1px solid transparent;
     @include transition;
+    @include lg {
+      padding: 20px 30px;
+    }
     .content {
       .title {
         color: $white;
