--- a/sass/pages/_home-two.scss
+++ b/sass/pages/_home-two.scss
@@ -113,6 +113,26 @@
   }
 }
 
+.testing-area {
+  .info-card {
+    padding: 60px 80px 60px 80px;
+    border: 1px dashed rgba(34, 34, 34, 0.2);
+    border-radius: 5px;
+    h4,
+    p {
+      margin-top: 15px;
+      margin-bottom: 0;
+    }
+    p {
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 29px;
+      color: #808287;
+    }
+  }
+}
+
 .portfolio-area {
   &.style-1 {
     @include md {
