--- a/sass/modules/about-image-card/_about-image-card-three.scss
+++ b/sass/modules/about-image-card/_about-image-card-three.scss
@@ -3,6 +3,10 @@
     .image-wrapper {
       position: relative;
       .main-img {
+        img {
+          width: 100%;
+          height: 100%;
+        }
         .shape {
           position: absolute;
           bottom: 0;
