--- a/sass/modules/blog-card/_blog-card.scss
+++ b/sass/modules/blog-card/_blog-card.scss
@@ -23,6 +23,10 @@
   }
   .image-wrapper {
     position: relative;
+    img {
+      width: 100%;
+      height: 100%;
+    }
     .overlay {
       width: 100%;
       height: 100%;
@@ -45,6 +49,15 @@
       margin-left: 75px;
       box-shadow: 0px 4px 20px 0px rgba(234, 234, 234, 0.3);
       @include transition;
+      @include xl {
+        padding: 30px;
+      }
+      .title {
+        @include lg {
+          font-size: 20px;
+          line-height: 30px;
+        }
+      }
     }
     .desc {
       margin-bottom: 0;
@@ -63,7 +76,7 @@
       left: 0;
       bottom: 0;
       display: inline-flex;
-      transform: rotate(-90deg) translate(26%, -153%);
+      transform: rotate(-90deg) translate(26%, -156%);
       width: 128px;
       a {
         font-size: 18px;
